--- a/index.html
+++ b/index.html
@@ -8,34 +8,36 @@
 <body>
 	<audio id="glassbreak" src="sound/break.mp3"></audio>
 	<audio id="blockhover" src="sound/focus.mp3"></audio>
-	<div id="game_control">
-		<h3>Histogram</h3>
-		<div id="histogram">
-			<div class="bars"></div>
-			<div class="bars"></div>
-			<div class="bars"></div>
-			<div class="bars"></div>
-			<div class="bars"></div>
-		</div>
-		<button id="sound" value="1" onclick="mute()" >Sound</button>
-	</div>
-	<div id="game">
-		<div id="game_head">
-		<div id="score_cont"><span>Score:</span><b id="score"></b></div>
-		<div id="temp_score_cont"></div>
-		</div>
-		<div id="game_board">
-			<div id="c1" class="col"></div>
-			<div id="c2" class="col"></div>
-			<div id="c3" class="col"></div>
-			<div id="c4" class="col"></div>
-			<div id="c5" class="col"></div>
-			<div id="c6" class="col"></div>
-			<div id="c7" class="col"></div>
-			<div id="c8" class="col"></div>
-			<div id="c9" class="col"></div>
-			<div id="c10" class="col"></div>
-		</div>
-	</div>
+    <main>
+        <div id="game_control">
+            <h3>Histogram</h3>
+            <div id="histogram">
+                <div class="bars"></div>
+                <div class="bars"></div>
+                <div class="bars"></div>
+                <div class="bars"></div>
+                <div class="bars"></div>
+            </div>
+            <button id="sound" value="1" onclick="mute()" >Sound</button>
+        </div>
+        <div id="game">
+            <div id="game_head">
+            <div id="score_cont"><span>Score:</span><b id="score"></b></div>
+            <div id="temp_score_cont"></div>
+            </div>
+            <div id="game_board">
+                <div id="c1" class="col"></div>
+                <div id="c2" class="col"></div>
+                <div id="c3" class="col"></div>
+                <div id="c4" class="col"></div>
+                <div id="c5" class="col"></div>
+                <div id="c6" class="col"></div>
+                <div id="c7" class="col"></div>
+                <div id="c8" class="col"></div>
+                <div id="c9" class="col"></div>
+                <div id="c10" class="col"></div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
